# miner-client

./: Cargo.toml  Makefile.toml  README.md  build.rs  cliff.toml  typos.toml
fixtures/: config.toml  status.json
protobuf/: miner_sign.proto
src/: cfg.rs  cmd.rs  entity.rs  lib.rs  main.rs  mqtt.rs  tp.rs  utils.rs
src/pb/: miner_sign.rs  mod.rs
src/req/: abi.rs  api.rs  mod.rs
