[package]
name = "miner-client"
version = "0.1.0"
edition = "2021"
authors = ["VainJoker <vainjoker@tuta.io>"]
readme = "README.md"
license = "GPL-3.0"
exclude = [
  ".github",
  "Makefile.toml",
  "CHANGELOG.md",
]

[dependencies]
prost = "0.12"
prost-helper = "0.8"
prost-types = "0.12"
tonic = {"version" = "0.11.0",features = ["codegen","prost"]}
tokio = { version = "1.37", features = ["full"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
rumqttc = "0.24.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json","fmt","env-filter","std","registry"] }
tracing-appender = "0.2"
tracing-error = "0.2.0"
config = "0.14.0"
serde = "1.0.203"
serde_json = "1.0.117"
reqwest = {version = "0.12.5", features= ["json"]}
clap = "4.5.7"
md5 = "0.7.0"

[build-dependencies]
prost-serde = "0.3"
tonic-build = { version = "0.11", features = ["prost"] }

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
module_inception = "allow"
# nursery or restricted
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
needless_raw_strings = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
use_self = "warn"

[profile.release]
strip = true
